--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "pdf2json": "^3.1.4",
