--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "epub-metadata-parser": "^1.1.14",
     "epub-parser": "^0.2.5",
     "epub2": "^3.0.2",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
@@ -40,6 +41,7 @@
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
+    "papaparse": "^5.5.3",
     "pdf2json": "^3.1.4",
     "pdf2pic": "^3.1.4",
     "sanitize-html": "^2.15.0",
