--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sharp": "^0.33.5",
     "unzipper": "^0.12.3",
     "vercel": "^41.7.4",
+    "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
